# ENAE450

./: .gitignore  README.md  cheat-sheet.md
Extra - camera, Aruco markers/: README.md
Extra - camera, Aruco markers/files/: aruco_parameters.yaml  aruco_track.launch.py  image_auxil.launch.py
Lab0/: README.md  humble_dockerfile.Dockerfile
Lab0 - ROS setup/: README.md  humble_dockerfile.Dockerfile
Lab1/: README.md
Lab1 - First run/: README.md
Lab1/files/: my_launch_file.launch.py  node_class.py  setup.cfg  setup.py  simple_node.py  simple_node2.py
Lab2/: README.md
Lab2 - pub and sub nodes/: README.md
Lab2 - pub and sub nodes/files/: my_publisher.py  my_subscriber.py
Lab3/: README.md
Lab3 - services/: README.md
Lab4/: README.md
Lab4 - custom msg and srv/: README.md
Lab4 - custom msg and srv/files/: AddThreeInts.srv
Lab5/: README.md
Lab5 - param/: README.md
Lab5 - param/files/: lab5_publisher.py  lab5_subscriber.py
Lab5/files/: lab5_publisher.py
Lab6/: README.md
Lab6 - launch files and turtlesim/files/: turtlesim_mimic_control_launch.py  turtlesim_mimic_launch.py
Lab7 - Gazebo, URDF, Turtlebot3/: README.md
Lab8 - Navigation/: README.md
homework/: hw1.md  hw2.md  hw3.md  hw4.md  hw5.md
homework/hw5/: package.xml  setup.cfg  setup.py
homework/hw5/launch/: tb3_4walls_inside.launch.py  tb3_4walls_outside.launch.py  turtlebot3_4walls.launch.py
homework/hw5/models/tb3_4walls/: four_walls.sdf  model.config
homework/hw5/worlds/: tb3_4walls.world  turtlebot3_world.world  workshop_example.world
misc/: .tmux.conf  cheat-sheet.md
(+29 files in other folders)
